MODSOURCE-342 Add HoldingsPostProcessingEventHandler